fix: uav/users cant venture beyond area boundaries

--- a/ECE1508_UAV_DQN.ipynb
+++ b/ECE1508_UAV_DQN.ipynb
@@ -56,7 +56,7 @@
         "\n",
         "    def forward(self, x):\n",
         "        x = x.view(x.size(0), -1)  # Flatten the input tensor\n",
-        "        x = F.leaky_relu(self.fc1(x))\n",
+        "        x = F.leaky_relu(self.fc1(x)) # Optimized for GPU\n",
         "        x = F.leaky_relu(self.fc2(x))\n",
         "        x = self.fc3(x)\n",
         "        return x"
@@ -141,36 +141,37 @@
         "        self.num_uavs = num_uavs\n",
         "        self.area_size = area_size\n",
         "        self.max_steps = max_steps  # Maximum number of steps in an episode\n",
-        "\n",
+        "        \n",
         "        # State space: positions of users and UAVs\n",
         "        self.observation_space = spaces.Box(low=0, high=area_size, shape=(self.num_users + self.num_uavs, 2))\n",
-        "\n",
+        "        \n",
         "        # Action space: UAVs can move in 4 directions (up, down, left, right)\n",
         "        self.action_space = spaces.Discrete(4 * self.num_uavs)\n",
-        "\n",
+        "        \n",
         "        # Initialize environment state\n",
         "        self.reset()\n",
         "\n",
         "    def reset(self):\n",
         "        self.users = np.random.rand(self.num_users, 2) * self.area_size\n",
-        "\n",
+        "        \n",
         "        # Use K-means to find clusters among the users\n",
         "        kmeans = KMeans(n_clusters=self.num_uavs, n_init=10)\n",
         "        kmeans.fit(self.users)\n",
         "        self.uavs = kmeans.cluster_centers_  # Initialize UAVs at the centroids of the clusters\n",
-        "\n",
-        "        self.velocities = np.random.uniform(-1, 1, (self.num_users, 2))\n",
+        "        \n",
+        "        self.user_velocities = np.random.uniform(-1, 1, (self.num_users, 2))\n",
+        "        self.uav_velocities = np.random.uniform(-1, 1, (self.num_uavs, 2))  # Add velocities for UAVs\n",
         "        self.current_step = 0\n",
         "        return self._get_state()\n",
         "\n",
         "    def step(self, action):\n",
         "        self.current_step += 1\n",
-        "\n",
+        "        \n",
         "        # Update UAV positions based on the selected actions\n",
         "        for i in range(self.num_uavs):\n",
         "            direction = action % 4  # Direction for each UAV (0: up, 1: down, 2: left, 3: right)\n",
         "            action = action // 4\n",
-        "\n",
+        "            \n",
         "            if direction == 0 and self.uavs[i][1] < self.area_size:  # Up\n",
         "                self.uavs[i][1] += 1\n",
         "            elif direction == 1 and self.uavs[i][1] > 0:  # Down\n",
@@ -179,21 +180,52 @@
         "                self.uavs[i][0] -= 1\n",
         "            elif direction == 3 and self.uavs[i][0] < self.area_size:  # Right\n",
         "                self.uavs[i][0] += 1\n",
+        "            \n",
+        "            # Boundary check to prevent UAVs from moving outside the map\n",
+        "            if self.uavs[i][0] < 0:\n",
+        "                self.uavs[i][0] = 0\n",
+        "                self.uav_velocities[i][0] *= -1  # Reverse direction\n",
+        "            elif self.uavs[i][0] > self.area_size:\n",
+        "                self.uavs[i][0] = self.area_size\n",
+        "                self.uav_velocities[i][0] *= -1  # Reverse direction\n",
         "\n",
+        "            if self.uavs[i][1] < 0:\n",
+        "                self.uavs[i][1] = 0\n",
+        "                self.uav_velocities[i][1] *= -1  # Reverse direction\n",
+        "            elif self.uavs[i][1] > self.area_size:\n",
+        "                self.uavs[i][1] = self.area_size\n",
+        "                self.uav_velocities[i][1] *= -1  # Reverse direction\n",
+        "        \n",
         "        # Update user positions\n",
         "        for i in range(self.num_users):\n",
-        "            self.users[i] += self.velocities[i]\n",
-        "            # Reflect users off walls\n",
-        "            if self.users[i][0] <= 0 or self.users[i][0] >= self.area_size:\n",
-        "                self.velocities[i][0] *= -1\n",
-        "                self.velocities[i][1] = np.random.uniform(-1, 1)\n",
-        "            if self.users[i][1] <= 0 or self.users[i][1] >= self.area_size:\n",
-        "                self.velocities[i][1] *= -1\n",
-        "                self.velocities[i][0] = np.random.uniform(-1, 1)\n",
-        "\n",
+        "            self.users[i] += self.user_velocities[i]\n",
+        "            \n",
+        "            # Boundary check to prevent users from moving outside the map\n",
+        "            if self.users[i][0] < 0:\n",
+        "                self.users[i][0] = 0\n",
+        "                self.user_velocities[i][0] *= -1  # Reverse direction\n",
+        "                self.user_velocities[i][1] = np.random.uniform(-1, 1)  # Randomize the y direction\n",
+        "            elif self.users[i][0] > self.area_size:\n",
+        "                self.users[i][0] = self.area_size\n",
+        "                self.user_velocities[i][0] *= -1  # Reverse direction\n",
+        "                self.user_velocities[i][1] = np.random.uniform(-1, 1)  # Randomize the y direction\n",
+        "                \n",
+        "            if self.users[i][1] < 0:\n",
+        "                self.users[i][1] = 0\n",
+        "                self.user_velocities[i][1] *= -1  # Reverse direction\n",
+        "                self.user_velocities[i][0] = np.random.uniform(-1, 1)  # Randomize the x direction\n",
+        "            elif self.users[i][1] > self.area_size:\n",
+        "                self.users[i][1] = self.area_size\n",
+        "                self.user_velocities[i][1] *= -1  # Reverse direction\n",
+        "                self.user_velocities[i][0] = np.random.uniform(-1, 1)  # Randomize the x direction\n",
+        "            \n",
+        "            # Ensure the velocity isn't too small to cause the user to stop moving\n",
+        "            if np.linalg.norm(self.user_velocities[i]) < 0.1:\n",
+        "                self.user_velocities[i] += np.random.uniform(-0.5, 0.5, 2)  # Add a small random vector\n",
+        "        \n",
         "        # Calculate the reward\n",
         "        reward = self._calculate_reward()\n",
-        "\n",
+        "        \n",
         "        # Check if the episode is done\n",
         "        done = self._is_done()\n",
         "\n",
@@ -201,9 +233,7 @@
         "\n",
         "    def _is_done(self):\n",
         "        # Terminal condition: episode ends after a certain number of steps\n",
-        "        if self.current_step >= self.max_steps:\n",
-        "            return True\n",
-        "        return False\n",
+        "        return self.current_step >= self.max_steps\n",
         "\n",
         "    def _get_state(self):\n",
         "        return np.concatenate([self.users, self.uavs])\n",
@@ -248,11 +278,11 @@
         "            agent.remember(state, action, reward, next_state, done)\n",
         "            state = next_state\n",
         "            total_reward += reward\n",
-        "\n",
+        "            \n",
         "            loss = agent.replay()\n",
         "            if loss is not None:\n",
         "                episode_losses.append(loss)\n",
-        "\n",
+        "            \n",
         "            if done:\n",
         "                break\n",
         "\n",
@@ -310,15 +340,21 @@
       "source": [
         "# Create the environment and DQN agent\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "#     def __init__(self, num_users=10, num_uavs=3, area_size=100, max_steps=200):\n",
-        "env = UAVClusterEnv(num_users=10, num_uavs=2, area_size=10)\n",
+        "env = UAVClusterEnv(num_users=3, num_uavs=1, area_size=10)\n",
         "state_size = np.prod(env.observation_space.shape)\n",
         "action_size = env.action_space.n\n",
-        "# action_size = 4 ** env.n_uavs  # 4 possible actions per UAV\n",
+        "\n",
+        "# IF using non-existing model, use this code:\n",
         "agent = DQNAgent(state_size, action_size)\n",
         "agent.model.to(device)\n",
         "\n",
-        "# stop_loss_threshold = -100  # Example threshold, adjust based on your environment"
+        "# IF using existing model, uncomment this code:\n",
+        "\n",
+        "# Initialize the model (make sure it matches the structure of the saved model)\n",
+        "# agent = DQNAgent(state_size, action_size)\n",
+        "\n",
+        "# # Load the saved weights\n",
+        "# agent.model.load_state_dict(torch.load(\"dqn_weights.pth\"))"
       ]
     },
     {
