--- a/ECE1508_UAV_DQN.ipynb
+++ b/ECE1508_UAV_DQN.ipynb
@@ -160,7 +160,7 @@
         "        self.uavs = kmeans.cluster_centers_  # Initialize UAVs at the centroids of the clusters\n",
         "        \n",
         "        self.user_velocities = np.random.uniform(-1, 1, (self.num_users, 2))\n",
-        "        self.uav_velocities = np.random.uniform(-1, 1, (self.num_uavs, 2))  # Add velocities for UAVs\n",
+        "        # self.uav_velocities = np.random.uniform(-1, 1, (self.num_uavs, 2))  # Add velocities for UAVs\n",
         "        self.current_step = 0\n",
         "        return self._get_state()\n",
         "\n",
@@ -172,30 +172,19 @@
         "            direction = action % 4  # Direction for each UAV (0: up, 1: down, 2: left, 3: right)\n",
         "            action = action // 4\n",
         "            \n",
-        "            if direction == 0 and self.uavs[i][1] < self.area_size:  # Up\n",
+        "            if direction == 0:  # Up\n",
         "                self.uavs[i][1] += 1\n",
-        "            elif direction == 1 and self.uavs[i][1] > 0:  # Down\n",
+        "            elif direction == 1: # Down\n",
         "                self.uavs[i][1] -= 1\n",
-        "            elif direction == 2 and self.uavs[i][0] > 0:  # Left\n",
+        "            elif direction == 2: # Left\n",
         "                self.uavs[i][0] -= 1\n",
-        "            elif direction == 3 and self.uavs[i][0] < self.area_size:  # Right\n",
+        "            elif direction == 3:  # Right\n",
         "                self.uavs[i][0] += 1\n",
         "            \n",
         "            # Boundary check to prevent UAVs from moving outside the map\n",
-        "            if self.uavs[i][0] < 0:\n",
-        "                self.uavs[i][0] = 0\n",
-        "                self.uav_velocities[i][0] *= -1  # Reverse direction\n",
-        "            elif self.uavs[i][0] > self.area_size:\n",
-        "                self.uavs[i][0] = self.area_size\n",
-        "                self.uav_velocities[i][0] *= -1  # Reverse direction\n",
-        "\n",
-        "            if self.uavs[i][1] < 0:\n",
-        "                self.uavs[i][1] = 0\n",
-        "                self.uav_velocities[i][1] *= -1  # Reverse direction\n",
-        "            elif self.uavs[i][1] > self.area_size:\n",
-        "                self.uavs[i][1] = self.area_size\n",
-        "                self.uav_velocities[i][1] *= -1  # Reverse direction\n",
-        "        \n",
+        "            self.uavs[i][0] = np.clip(self.uavs[i][0], 0, self.area_size)  # Ensure x is within bounds\n",
+        "            self.uavs[i][1] = np.clip(self.uavs[i][1], 0, self.area_size)  # Ensure y is within bounds\n",
+        "            \n",
         "        # Update user positions\n",
         "        for i in range(self.num_users):\n",
         "            self.users[i] += self.user_velocities[i]\n",
@@ -245,6 +234,9 @@
         "            distances = np.linalg.norm(self.users - uav, axis=1)\n",
         "            coverage = np.sum(np.exp(-distances))  # Exponential decay with distance\n",
         "            total_reward += coverage\n",
+        "\n",
+        "            # Penalize UAV for being far from users\n",
+        "            total_reward -= np.sum(distances) * 0.001  # Adjust weight as needed\n",
         "        return total_reward\n",
         "\n",
         "    def render(self, mode='human'):\n",
